Improved index.html meta data for better google results

--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
+    <meta name="description" content="CADGuardian - Use AI to create. From napkin to conception! Object Capture. Upload your CAD drawings and let AI handle the rest. Supports DWG, DXF, PDFs, and hand-drawn images." />
+    <meta name="keywords" content="CAD, AI, 3D Modeling, CAD Drawings, DWG, DXF, CAD Automation, Object Capture, CAD Guardian" />
+    <meta name="author" content="CADGuardian" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>CADGuardian - AI-Powered CAD Automation</title>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="CADGuardian - AI-Powered CAD Automation" />
+    <meta property="og:description" content="Use AI to create. From napkin to conception! Upload your CAD drawings and let AI handle the rest. Supports DWG, DXF, PDFs, and hand-drawn images." />
+    <meta property="og:url" content="https://www.cadguardian.com/" />
+    <meta property="og:image" content="https://www.cadguardian.com/assets/og-image.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="CADGuardian - AI-Powered CAD Automation" />
+    <meta name="twitter:description" content="Use AI to create. From napkin to conception! Upload your CAD drawings and let AI handle the rest. Supports DWG, DXF, PDFs, and hand-drawn images." />
+    <meta name="twitter:image" content="https://www.cadguardian.com/assets/twitter-image.png" />
+
+    <!-- Schema.org for Google -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "url": "https://www.cadguardian.com/",
+        "name": "CADGuardian",
+        "description": "CADGuardian is an AI-powered platform that automates CAD creation. Upload your designs and let AI handle the detailed work.",
+        "publisher": {
+            "@type": "Organization",
+            "name": "CADGuardian"
+        }
+    }
+    </script>
+</head>
+
+<body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+</body>
+
 </html>
