to verify results

--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="CADGuardian - Use AI to create. From napkin to conception! Object Capture. Upload your CAD drawings and let AI handle the rest. Supports DWG, DXF, PDFs, and hand-drawn images." />
-    <meta name="keywords" content="CAD, AI, 3D Modeling, CAD Drawings, DWG, DXF, CAD Automation, Object Capture, CAD Guardian" />
+    <meta name="description" content="CADGuardian - AI-powered automation for CAD workflows. Revolutionize your CAD process from sketch to production. Upload CAD drawings and let AI handle the rest with full support for DWG, DXF, PDFs, and more." />
+    <meta name="keywords" content="CAD, AI, CAD Automation, 3D Modeling, DWG, DXF, CAD Drawings, CAD Design, CADGuardian" />
     <meta name="author" content="CADGuardian" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <title>CADGuardian - AI-Powered CAD Automation</title>
+    <title>CADGuardian - AI-Powered CAD Workflow Automation</title>
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="CADGuardian - AI-Powered CAD Automation" />
-    <meta property="og:description" content="Use AI to create. From napkin to conception! Upload your CAD drawings and let AI handle the rest. Supports DWG, DXF, PDFs, and hand-drawn images." />
+    <meta property="og:title" content="CADGuardian - AI-Powered CAD Workflow Automation" />
+    <meta property="og:description" content="Automate your CAD workflows with AI. From concept to production, CADGuardian streamlines every step with full support for DWG, DXF, and more." />
     <meta property="og:url" content="https://www.cadguardian.com/" />
     <meta property="og:image" content="https://www.cadguardian.com/assets/og-image.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="CADGuardian - AI-Powered CAD Automation" />
-    <meta name="twitter:description" content="Use AI to create. From napkin to conception! Upload your CAD drawings and let AI handle the rest. Supports DWG, DXF, PDFs, and hand-drawn images." />
+    <meta name="twitter:title" content="CADGuardian - AI-Powered CAD Workflow Automation" />
+    <meta name="twitter:description" content="Streamline your CAD process with AI. Upload your designs, and let CADGuardian do the heavy lifting, from drawing to fabrication." />
     <meta name="twitter:image" content="https://www.cadguardian.com/assets/twitter-image.png" />
 
     <!-- Schema.org for Google -->
@@ -30,7 +30,7 @@
         "@type": "WebSite",
         "url": "https://www.cadguardian.com/",
         "name": "CADGuardian",
-        "description": "CADGuardian is an AI-powered platform that automates CAD creation. Upload your designs and let AI handle the detailed work.",
+        "description": "CADGuardian is an AI-powered platform designed to automate CAD workflows from sketch to production. Upload your CAD designs and let AI handle the details.",
         "publisher": {
             "@type": "Organization",
             "name": "CADGuardian"
