google-site-verification via meta tag instead of html file

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <meta name="google-site-verification" content="pcLHUuHO8Qu4n8TD6e_1bR1ZBx5_F40MUlfoh5B3avI" />
 </body>
 
 </html>
