Updated schema.org for google in index.html for better seo

--- a/index.html
+++ b/index.html
@@ -26,18 +26,93 @@
 
     <!-- Schema.org for Google -->
     <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "WebSite",
-        "url": "https://www.cadguardian.com/",
-        "name": "CADGuardian",
-        "description": "CADGuardian is an AI-powered platform designed to automate CAD workflows from sketch to production. Upload your CAD designs and let AI handle the details.",
-        "publisher": {
-            "@type": "Organization",
-            "name": "CADGuardian"
-        }
-    }
-    </script>
+        {JSON.stringify({
+          "@context": "https://schema.org",
+          "@type": "Organization",
+          "name": "CADGuardian",
+          "url": "https://www.cadguardian.com",
+          "description": "Revolutionize your CAD workflows with CADGuardian's AI-powered automation. From concept to production, automate every step and streamline your design process.",
+          "url": "https://www.cadguardian.com",
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "email": "support@cadguardian.com",
+            "contactType": "Customer Support"
+          },
+          "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://www.cadguardian.com/search?q={search_term_string}",
+            "query-input": "required name=search_term_string"
+          },
+          "mainEntityOfPage": {
+            "@type": "WebPage",
+            "@id": "https://www.cadguardian.com"
+          },
+          "hasPart": [
+            {
+              "@type": "WebPage",
+              "name": "Home Page",
+              "url": "https://www.cadguardian.com",
+              "description": "Revolutionize your CAD workflows with CADGuardian's AI-powered automation."
+            },
+            {
+              "@type": "WebPage",
+              "name": "About Us",
+              "url": "https://www.cadguardian.com/about",
+              "description": "Learn more about CADGuardian's mission to transform CAD workflows with AI-powered solutions."
+            },
+            {
+              "@type": "WebPage",
+              "name": "Pricing",
+              "url": "https://www.cadguardian.com/pricing",
+              "description": "Explore CADGuardian's flexible pricing plans for individuals, teams, and enterprises."
+            },
+            {
+              "@type": "WebPage",
+              "name": "Contact Us",
+              "url": "https://www.cadguardian.com/contact",
+              "description": "Get in touch with the CADGuardian team for support or partnership inquiries."
+            },
+            {
+              "@type": "WebPage",
+              "name": "Sign Up",
+              "url": "https://www.cadguardian.com/signup",
+              "description": "Create your CADGuardian account and start automating your CAD workflows."
+            },
+            {
+              "@type": "WebPage",
+              "name": "Login",
+              "url": "https://www.cadguardian.com/login",
+              "description": "Log in to your CADGuardian account to access your AI-powered CAD tools."
+            },
+            {
+              "@type": "WebPage",
+              "name": "Recover Account",
+              "url": "https://www.cadguardian.com/recover",
+              "description": "Forgot your password? Use our tool to recover access to your CADGuardian account."
+            },
+            {
+              "@type": "WebPage",
+              "name": "Terms of Service",
+              "url": "https://www.cadguardian.com/terms-of-service",
+              "description": "Read the terms and conditions governing the use of CADGuardian."
+            },
+            {
+              "@type": "WebPage",
+              "name": "Privacy Policy",
+              "url": "https://www.cadguardian.com/privacy-policy",
+              "description": "Learn about how CADGuardian protects your data and ensures privacy."
+            },
+            {
+              "@type": "WebPage",
+              "name": "Backlinks and Resources",
+              "url": "https://www.cadguardian.com/backlinks",
+              "description": "Explore curated links to reputable CAD and AI-related resources."
+            }
+          ]
+        })}
+      </script>
+
+
 </head>
 
 <body>
