Add CAD Guardian to keywords for better google search results

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="CADGuardian - AI-powered automation for CAD workflows. Revolutionize your CAD process from sketch to production. Upload CAD drawings and let AI handle the rest with full support for DWG, DXF, PDFs, and more." />
-    <meta name="keywords" content="CAD, AI, CAD Automation, 3D Modeling, DWG, DXF, CAD Drawings, CAD Design, CADGuardian" />
+    <meta name="keywords" content="CAD, AI, CAD Automation, 3D Modeling, DWG, DXF, CAD Drawings, CAD Design, CADGuardian, CAD Guardian" />
     <meta name="author" content="CADGuardian" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <title>CADGuardian - AI-Powered CAD Workflow Automation</title>
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="CADGuardian - AI-Powered CAD Workflow Automation" />
+    <meta property="og:title" content="CADGuardian - AI-Powered CAD Workflow Automation | CAD Guardian" />
     <meta property="og:description" content="Automate your CAD workflows with AI. From concept to production, CADGuardian streamlines every step with full support for DWG, DXF, and more." />
     <meta property="og:url" content="https://www.cadguardian.com/" />
     <meta property="og:image" content="src/assets/img/cad-image.jpg" />
